--- a/OpenGL_VS16/OpenGL_VS16.vcxproj
+++ b/OpenGL_VS16/OpenGL_VS16.vcxproj
@@ -72,21 +72,27 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
+    <ExternalIncludePath>D:\Developer'sSite\OpenGL\OpenGL_VS16\OpenGL_VS16\header\imgui;$(ExternalIncludePath)</ExternalIncludePath>
+    <SourcePath>$(VC_SourcePath);;D:\Developer'sSite\OpenGL\OpenGL_VS16\OpenGL_VS16</SourcePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
+    <ExternalIncludePath>D:\Developer'sSite\OpenGL\OpenGL_VS16\OpenGL_VS16\header\imgui;$(ExternalIncludePath)</ExternalIncludePath>
+    <SourcePath>$(VC_SourcePath);;D:\Developer'sSite\OpenGL\OpenGL_VS16\OpenGL_VS16</SourcePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>C:\cpp_lib\include;$(SolutionDir)\OpenGL_VS16\header;$(IncludePath)</IncludePath>
+    <IncludePath>C:\cpp_lib\include;$(SolutionDir)\OpenGL_VS16\header;$(SolutionDir)\OpenGL_VS16\header\imgui;$(IncludePath)</IncludePath>
     <LibraryPath>C:\cpp_lib\lib;$(LibraryPath)</LibraryPath>
-    <SourcePath>$(SoultionDir)\OpenGL_vs16\resource;$(SourcePath)</SourcePath>
+    <SourcePath>$(SoultionDir)\OpenGL_vs16\;$(SourcePath);D:\Developer'sSite\OpenGL\OpenGL_VS16\OpenGL_VS16</SourcePath>
+    <ExternalIncludePath>D:\Developer'sSite\OpenGL\OpenGL_VS16\OpenGL_VS16\header\imgui;$(ExternalIncludePath)</ExternalIncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>C:\cpp_lib\include;$(SolutionDir)\OpenGL_VS16\header;$(IncludePath)</IncludePath>
+    <IncludePath>C:\cpp_lib\include;$(SolutionDir)\OpenGL_VS16\header;$(SolutionDir)\OpenGL_VS16\header\imgui;$(IncludePath)</IncludePath>
     <LibraryPath>C:\cpp_lib\lib;$(LibraryPath)</LibraryPath>
-    <SourcePath>$(SoultionDir)\OpenGL_vs16\resource;$(SourcePath)</SourcePath>
+    <SourcePath>$(SoultionDir)\OpenGL_vs16\;$(SourcePath);D:\Developer'sSite\OpenGL\OpenGL_VS16\OpenGL_VS16</SourcePath>
+    <ExternalIncludePath>D:\Developer'sSite\OpenGL\OpenGL_VS16\OpenGL_VS16\header\imgui;$(ExternalIncludePath)</ExternalIncludePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -126,7 +132,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>assimp-vc142-mtd.lib;glfw3.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>assimp-vc142-mtd.lib;glfw3.lib;Opengl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -143,7 +149,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>assimp-vc142-mtd.lib;glfw3.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>assimp-vc142-mtd.lib;glfw3.lib;Opengl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
@@ -154,6 +160,7 @@
     <ClInclude Include="header\model.h" />
     <ClInclude Include="header\shader.h" />
     <ClInclude Include="header\util.h" />
+    <ClInclude Include="header\window.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="source\camera.cpp" />
@@ -161,13 +168,21 @@
     <ClCompile Include="source\construction\mesh.cpp" />
     <ClCompile Include="source\construction\model.cpp" />
     <ClCompile Include="source\glad.c" />
+    <ClCompile Include="source\glx.cpp" />
+    <ClCompile Include="source\imgui.cpp" />
+    <ClCompile Include="source\imgui_demo.cpp" />
+    <ClCompile Include="source\imgui_draw.cpp" />
+    <ClCompile Include="source\imgui_impl_glfw.cpp" />
+    <ClCompile Include="source\imgui_impl_opengl3.cpp" />
+    <ClCompile Include="source\imgui_tables.cpp" />
+    <ClCompile Include="source\imgui_widgets.cpp" />
     <ClCompile Include="source\main.cpp" />
     <ClCompile Include="source\shader.cpp" />
+    <ClCompile Include="source\window.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="backpack\backpack.mtl" />
-    <None Include="resource\shader\cube-light.fs" />
-    <None Include="resource\shader\cube.fs" />
+    <None Include="resource\shader\light.fs" />
+    <None Include="resource\shader\object.fs" />
     <None Include="resource\shader\shader.fs" />
     <None Include="resource\shader\shader.vs" />
   </ItemGroup>
